--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "browser_action": {"message": "Open calculator" },
-  "ext_desc": {"message": "use calculator in one click" },
+  "ext_desc": {"message": "Use calculator in one click" },
   "ext_name": {"message": "1click Calculator" }
 }
 
